# hp-admin-crypto

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  shell.nix
.github/: CODEOWNERS
client/: .jsdoc.json  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  package-lock.json  package.json
client/docs/: HpAdminKeypair.html  hp_admin_crypto_client.js.html  hp_admin_key_manager.js.html  index.html
client/src/: lib.rs  util.rs
client/tests/www/: index.html  index.js  package-lock.json  package.json
server/: CONTRIBUTING.md  Cargo.toml  README.md
server/resources/test/: hpos-config-v2.json  hpos-config.json  hpos-state.json
server/src/: main.rs  tests.rs
