[package]
name = "hp-admin-keypair"
version = "0.1.2"
description = "Client side package for signing API calls to HPOS Admin"
authors = ["PJ <pj@imagine-nyc.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Holo-Host/hp-admin-crypto"

[dependencies]
base36 = { git = "https://github.com/transumption-unstable/base36", rev = "4e6981e13ec5f3748dfe9b8870aa4e8ed749096d"}
base64 = "0.10.1"
console_error_panic_hook = "0.1.6"
ed25519-dalek = { version = "1.0.0-pre.2", features = ["nightly", "serde"] }
failure = "0.1.5"
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", branch = "develop" }
js-sys = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.51"

[dev-dependencies]
wasm-bindgen-test = "0.2.50"

[lib]
crate-type = ["cdylib", "rlib"]
