[package]
name = "hp-admin-keypair"
version = "0.2.2"
description = "Client side package for signing API calls to HPOS Admin"
authors = ["PJ <pj@imagine-nyc.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Holo-Host/hp-admin-crypto"

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1.6"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1.5"
js-sys = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.78"

[dependencies.base36]
git = "https://github.com/transumption-unstable/base36"
branch = "2019-12-18-nix"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "bac6758c452974c13f08edb046b816b48bb317c7"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[lib]
crate-type = ["cdylib", "rlib"]
