[package]
name = "hp-admin-crypto-server"
version = "0.2.0"
description = "Service for checking authorizatoin of API calls from HP Admin UI"
authors = ["PJ <pj@imagine-nyc.com>"]
edition = "2018"
repository = "https://github.com/Holo-Host/hp-admin-crypto"

[dependencies]
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
env_logger = "0.6.2"
futures = "0.1.25"
hyper = "0.12"
lazy_static = "1.2"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
url = "2.1.0"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "bac6758c452974c13f08edb046b816b48bb317c7"

[dev-dependencies.base36]
git = "https://github.com/transumption-unstable/base36"
branch = "2019-12-18-nix"
